@@ -34,7 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/bsd">BSD-2-Clause</license>
  <notes>
-* 
+* [jan] Fix changing permissions for shared rulesets.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1169,7 +1169,7 @@
    <date>2012-11-07</date>
    <license uri="http://www.horde.org/licenses/bsd">BSD-2-Clause</license>
    <notes>
-* 
+* [jan] Fix changing permissions for shared rulesets.
    </notes>
   </release>
  </changelog>
