@@ -2,6 +2,7 @@
 v3.0.2-git
 ----------
 
+[jan] Fix changing permissions for shared rulesets.
 
 
 ------
